# todo

./: .env.example  .gitignore  manage.py  pyproject.toml
.bmad-core/: install-manifest.yaml
.github/workflows/: ci.yml  deploy.yml
apps/accounts/: admin.py  forms.py  models.py  urls.py  views.py
apps/tasks/: admin.py  forms.py  models.py  urls.py  views.py
apps/visualization/: api_views.py  graph_builder.py  urls.py  views.py
docs/: brainstorming-session-results.md  brief.md  prd.md
docs/architecture/: README.md  api-specification.md  coding-standards.md  data-models.md  deployment-architecture.md  development-workflow.md  error-handling-strategy.md  high-level-architecture.md  introduction.md  monitoring-observability.md  security-performance.md  source-tree.md  tech-stack.md  testing-strategy.md
docs/prd/: checklist-results-report.md  epic-1-foundation-core-infrastructure.md  epic-2-tag-management-visual-organization.md  epic-3-network-graph-visualization.md  epic-4-advanced-user-experience-polish.md  epic-list.md  goals-and-background-context.md  index.md  next-steps.md  requirements.md  technical-assumptions.md  user-interface-design-goals.md
docs/stories/: 1.1.story.md  1.2.story.md  1.3.story.md  1.4.story.md  1.5.story.md  1.6.story.md  2.1.story.md  2.2.story.md  2.3.story.md  2.4.story.md  2.5.story.md  2.6.story.md  3.1.story.md  (+2 more)
requirements/: base.in  base.txt  development.in  development.txt  production.in  production.txt
scripts/: setup_dev.sh
templates/: 404.html  500.html  base.html  home.html
todo_project/: asgi.py  urls.py  wsgi.py
(+46 files in other folders)
